# research-template

./: .dockerignore  .editorconfig  .env.example  .envrc  .gitignore  .gitmodules  .markdownlint.jsonc  .pre-commit-config.yaml  .sftpignore  CHANGELOG.md  CLAUDE.md.example  Dockerfile  README.md  SETUP.md  build_experiment.py  command.sh  docker-compose.yml  docker-setup.sh  environment.yaml  environment.yml  experiment_agent.py  pyproject.toml  requirements.txt  run.sh  run_experiment.py  run_sft.py  setup-environment.sh  sft.py
.claude/: README.md  settings.json
.claude/hooks/: check-print-usage.sh  check-test-modification.sh
.claude/rules/: branch-strategy.md  coding-conventions.md  commit-messages.md  research-workflow.md  safety.md
.claude/skills/anti-ai-writing/: SKILL.md
.claude/skills/experiment-pipeline/: SKILL.md
.github/workflows/: ci.yml
configs/sft/: config.yaml  model_config.yaml  sft_config.yaml
configs/sft/dataset/: gsm8k.yaml
configs/sft/model/: gpt2.yaml
configs/sft/training/: default.yaml
data/: README.md
docs/: README.md  research-guidelines.md
experiments/: 000-demo-sft.yaml  001-demo-sft.yaml  README.md  exp_template.ipynb  run_multiple_sync.py
experiments/YYMMDD_example_experiment/: experiment.py  main.py  run_default.sh  worker.py
experiments/YYMMDD_example_experiment/configs/: default.yaml  example1.yaml
experiments/example/: experiment.py  run_default.sh
experiments/example/configs/: default.yaml
experiments/example_log_to_wandb/: experiment.ipynb  experiment.py  main.py
experiments/finetune/: functions.sh
experiments/finetune/args/: default-chat-template.yaml  default.yaml  gsm8k-1epoch-lr1e-4.yaml
experiments/sft/: script_args.yaml  sft_config.yaml
logs/: README.md
misc/: clean_outputs_by_local_status.py  clean_outputs_by_wandb.py  debug.sh  setup-environment.sh  setup-pyenv.sh  sync-for-debug.sh  wait-for-pid.sh
notebooks/: template.ipynb
output/: README.md
outputs/: README.md
scripts/: README.md  demo_eval.sh  example-finetune.sh  run_tests.sh  sft.sh  train-single.sh  train.sh
src/: __init__.py  args.py  finetune.py  main.py  preprocess.py  sft.py  train.py
src/utils/: __init__.py  logger.py  parse_args.py
test/: __init__.py  test_dataset_preprocessing.py  test_experiment_runner.py
tests/: conftest.py  test_basic.py  test_sft.py  test_trainer.py  test_validation.py
utils/: args.py  batch_size.py  dataset_preprocessing.py  env.py  hydra_decorators.py  remote-debug.sh  wait-for-pid.sh
