[project]
name = "research-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "clearml",
    "datasets",
    "hf-transfer>=0.1.9",
    "hf-xet>=1.2.0",
    "hydra-core",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.3",
    "numpy>=2.4.1",
    "omegaconf",
    "pandas>=2.0.0",
    "seaborn>=0.13.2",
    "torch",
    "transformers",
    "triton>=3.6.0",
    "wandb",
    "lm-eval[hf]",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

[project.optional-dependencies]
flash = ["flash-attn"]

[tool.uv.sources]
lm-eval = { path = "packages/lm-eval", editable = true }

[tool.uv.extra-build-dependencies]
flash-attn = [
    { requirement = "torch", match-runtime = true },
    "ninja>=1.13.0",
    "packaging",
]
